<resources>
    <string name="app_name">Runway_curiosity</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="lastUpdateTime_label">Last Update Time</string>
    <string name="no_location_detected">Sorry, no location is detected</string>
    <string name="permission_denied_explanation">No any data is recording.
        Permission was denied, but is needed for core functionality.</string>
    <string name="status" >""</string>
    <string name="permission_rationale">ocation permission is needed for core functionality</string>
    <string name="settings">Setting</string>
    <string name="start_update">Record</string>
    <string name="stop_update">Stop</string>
    <string name="view_record">Pathway</string>
    <string name="back">BACK</string>
</resources>
